# EngiOpt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  case_study_pe_notebook.ipynb  data_analysis.ipynb  example_easy_model.ipynb  example_hard_model.ipynb  pyproject.toml  scalers.npz  setup.py  tutorial.ipynb  tutorial_ann_image_regression.ipynb  tutorial_ann_tabular_regression.ipynb  tutorial_surrogate_optimization.ipynb
.github/workflows/: lint.yaml  pre-commit.yaml  test.yml
engibench_studies/problems/airfoil2d/: optimize.sh  pre_process.sh
engilearn/: cgan_1d.py  diffusion_1d.py  gan_1d.py  optimize_from_dataset.py
engiopt/: ann_tabular_regression.py  args_utils.py  autogluon_multimodal.py  bayes_optimize.py  beziergan.py  cgan_1d.py  cgan_2d.py  cgan_cnn_2d.py  dataset_sample_conditions.py  diffusion_1d.py  diffusion_2d_cond.py  evaluate_cgan_1d.py  evaluate_cgan_2d.py  evaluate_cgan_cnn_2d.py  evaluate_gan_2d.py  gan.py  gan_1d.py  gan_2d.py  gan_cnn_2d.py  metrics.py  mlp_tabular_only.py  model_pipeline.py  optimize_from_dataset.py  pymoo_pe_problem.py  run_pe_optimization.py  shape2shape_leastV_vae.py  shape2shape_leastV_vae_hybsm.py  shape2shape_leastV_vae_hybsm_nodatap.py  shape2shape_vae.py  sm_vae_1D.py  surrogate_utils.py  test_cgan2d.ipynb  test_cgan_cnn_2d.ipynb  training_utils.py  transforms.py  vae_mlp_multimodal.py  vae_model.py
engiopt/cgan_1d/: cgan_1d.py  evaluate_cgan_1d.py
engiopt/cgan_2d/: cgan_2d.py  evaluate_cgan_2d.py
engiopt/cgan_bezier/: cgan_bezier.py
engiopt/cgan_cnn_2d/: cgan_cnn_2d.py  evaluate_cgan_cnn_2d.py
engiopt/cgan_cnn_3d/: README.md  cgan_cnn_3d.py  evaluate_cgan_cnn_3d.py  sweep.yaml  sweep_cgan_cnn_3d.yaml  sweep_cgan_cnn_3d_grid.yaml  sweep_grid.yaml
engiopt/cgan_vae/: README.md  cgan_vae.py  evaluate_cgan_vae.py  sample_script.ipynb  sweep_cgan_vae.yaml  sweep_cgan_vae_grid.yaml
engiopt/diffusion_1d/: diffusion_1d.py  evaluate_diffusion_1d.py
engiopt/diffusion_2d_cond/: diffusion_2d_cond.py  evaluate_diffusion_2d.py  evaluate_diffusion_2d_cond.py
engiopt/gan_1d/: evaluate_gan_1d.py  gan_1d.py
engiopt/gan_2d/: evaluate_gan_2d.py  gan_2d.py
engiopt/gan_bezier/: evaluate_gan_bezier.py  gan_bezier.py
engiopt/gan_cnn_2d/: evaluate_gan_cnn_2d.py  gan_cnn_2d.py
engiopt/slice_gan_3d/: README.md  evaluate_slice_gan_3d.py  slice_gan_3d.py  sweep_slice_gan_3d.yaml  sweep_slice_gan_3d_grid.yaml
engiopt/surrogate_model/: bayes_optimize.py  case_study_pe_notebook.ipynb  evaluate_optimal_sols.py  mlp_tabular_only.py  model_pipeline.py  pymoo_pe_problem.py  run_pe_optimization.py  training_utils.py
wandb/: latest-run
wandb/run-20250114_121542-dc27qpq0/: run-dc27qpq0.wandb
wandb/run-20250114_121542-dc27qpq0/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250114_122131-mb7njus1/: run-mb7njus1.wandb
wandb/run-20250114_122230-z56asa61/: run-z56asa61.wandb
wandb/run-20250114_122444-aa6lra5f/: run-aa6lra5f.wandb
wandb/run-20250115_082934-ca4xqmes/: run-ca4xqmes.wandb
wandb/run-20250115_090659-14gq5jzw/: run-14gq5jzw.wandb
wandb/run-20250115_090823-gn9cme74/: run-gn9cme74.wandb
wandb/run-20250115_090916-rqii4a1w/: run-rqii4a1w.wandb
wandb/run-20250115_091332-lob713su/: run-lob713su.wandb
wandb/run-20250115_091907-d9e59jzl/: run-d9e59jzl.wandb
wandb/run-20250115_092459-4tor233v/: run-4tor233v.wandb
wandb/run-20250115_093741-1m12vgk3/: run-1m12vgk3.wandb
wandb/run-20250115_093953-vs7oht4z/: run-vs7oht4z.wandb
wandb/run-20250115_094024-stvpas0j/: run-stvpas0j.wandb
wandb/run-20250115_094223-x79anodq/: run-x79anodq.wandb
wandb/run-20250115_094243-03onnsqo/: run-03onnsqo.wandb
wandb/run-20250115_094624-jx66yx6k/: run-jx66yx6k.wandb
wandb/run-20250115_094853-qoehjyxj/: run-qoehjyxj.wandb
wandb/run-20250115_094919-ate7onm9/: run-ate7onm9.wandb
wandb/run-20250115_095037-9kppqwul/: run-9kppqwul.wandb
wandb/run-20250115_095107-lfcyo4g1/: run-lfcyo4g1.wandb
wandb/run-20250115_095138-sfyieyz0/: run-sfyieyz0.wandb
wandb/run-20250129_080813-oukii53z/: run-oukii53z.wandb
wandb/run-20250129_080844-7du0lx78/: run-7du0lx78.wandb
wandb/run-20250129_081235-fb6iqrwd/: run-fb6iqrwd.wandb
wandb/run-20250129_081801-0kfqzlg9/: run-0kfqzlg9.wandb
wandb/run-20250129_081828-0icx6ezt/: run-0icx6ezt.wandb
wandb/run-20250129_081902-zd67y5l4/: run-zd67y5l4.wandb
wandb/run-20250129_082027-z1vvaqoh/: run-z1vvaqoh.wandb
wandb/run-20250129_082101-m43yqxtr/: run-m43yqxtr.wandb
wandb/run-20250129_082412-96kn41wh/: run-96kn41wh.wandb
wandb/run-20250129_084707-8c0r65w5/: run-8c0r65w5.wandb
wandb/run-20250129_085424-1of1bkns/: run-1of1bkns.wandb
wandb/run-20250129_085500-2ek82uy8/: run-2ek82uy8.wandb
wandb/run-20250129_085741-2k2itz6q/: run-2k2itz6q.wandb
wandb/run-20250129_090155-y5yvgdbt/: run-y5yvgdbt.wandb
wandb/run-20250129_090215-mm5v7m37/: run-mm5v7m37.wandb
wandb/run-20250129_090801-hhqb4mfh/: run-hhqb4mfh.wandb
wandb/run-20250129_090816-dbpivz6h/: run-dbpivz6h.wandb
wandb/run-20250129_090922-livmjuwf/: run-livmjuwf.wandb
wandb/run-20250129_091112-rhx0e7tf/: run-rhx0e7tf.wandb
wandb/run-20250129_091345-homa0j1v/: run-homa0j1v.wandb
wandb/run-20250129_092117-dnpdbu9x/: run-dnpdbu9x.wandb
wandb/run-20250129_092817-coygf0c7/: run-coygf0c7.wandb
wandb/run-20250129_092835-xm3r7ji3/: run-xm3r7ji3.wandb
wandb/run-20250129_093141-rhhqhqih/: run-rhhqhqih.wandb
wandb/run-20250129_093538-07hcbev1/: run-07hcbev1.wandb
wandb/run-20250129_093719-cuer6q33/: run-cuer6q33.wandb
wandb/run-20250129_095345-eracxh48/: run-eracxh48.wandb
wandb/run-20250225_051705-vgfs5ism/: run-vgfs5ism.wandb
wandb/run-20250225_061908-pn4cwj35/: run-pn4cwj35.wandb
wandb/run-20250225_062009-y3jrsxm8/: run-y3jrsxm8.wandb
wandb/run-20250225_063729-yc7kgrc4/: run-yc7kgrc4.wandb
wandb/run-20250225_063755-4bh94t9k/: run-4bh94t9k.wandb
wandb/run-20250225_064117-jq0gtbjy/: run-jq0gtbjy.wandb
wandb/run-20250225_064257-g7m4ok08/: run-g7m4ok08.wandb
wandb/run-20250225_064315-1dklg42h/: run-1dklg42h.wandb
wandb/run-20250225_064410-12av6wpg/: run-12av6wpg.wandb
(+149 files in other folders)
